# operation-wizard

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/scripts/: bump-version.mjs
.github/workflows/: release.yml
docs/: PROJECT_GUIDE.md  plan-requirement-form-and-prompt-optimizer.md  rag-confluence-guide.md  usability-review.md
docs/design/: 01-overview.md  02-architecture.md  03-agent-detection.md  04-ui-and-design-system.md  05-decisions.md  06-build-and-environment.md  07-workspace-and-runs.md  08-guided-flows-and-skills.md  README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  aipro.rs  confluence.rs  detect.rs  exec.rs  fabrix.rs  files.rs  knowledge.rs  lib.rs  main.rs  mcp.rs  projects.rs  rag.rs  resolve.rs  run.rs  settings.rs
src/components/: AgentCard.tsx  AgentIcon.tsx  AgentsView.tsx  AiProCard.tsx  AppShell.tsx  ArtifactsPanel.tsx  AssistantMessage.tsx  CanvasPanel.tsx  ChatPanel.tsx  DiagramGallery.tsx  ErrorBoundary.tsx  FabrixCard.tsx  FileViewer.tsx  FlowSettingsView.tsx  HomeArea.tsx  HomeView.tsx  KnowledgeSavePanel.tsx  KnowledgeView.tsx  Markdown.tsx  NavRail.tsx  RequirementsForm.tsx  StatusDot.tsx  TopBar.tsx  WorkflowStepper.tsx  WorkspaceView.tsx  workspace.ts
src/lib/: api.ts  artifacts.ts  categorize.ts  clarify.ts  clipboard.ts  foundation.ts  ingest.ts  knowledgeSave.ts  linkGuard.ts  options.ts  promptCraft.ts  ragRelevance.ts  skills.ts  types.ts  useArtifactExistence.ts  useAutoGrow.ts  workflow.ts
src/styles/: global.css  tokens.css
