[package]
name = "operation-wizard"
version = "0.1.0"
description = "Operation Wizard — detects local CLI agents (OpenCode)"
authors = ["Samsung SDS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "operation_wizard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wait-timeout = "0.2"
# First HTTP dependency (Confluence crawl + user RAG API). `blocking` matches the
# app's std worker-thread idiom (never call on the IPC thread); `native-tls` is
# schannel on Windows, which trusts the OS cert store — where corporate
# TLS-inspection proxy CAs live (avoids the codex BadSignature class, D28/D48).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
